--- a/trunk/pioneers/debian/control
+++ b/trunk/pioneers/debian/control
@@ -20,6 +20,7 @@ Build-Depends: autoconf,
                xfonts-scalable,
                yelp-tools
 Standards-Version: 4.5.0
+Rules-Requires-Root: no
 Homepage: http://pio.sourceforge.net/
 Vcs-Svn: https://svn.code.sf.net/p/pio/code/trunk/pioneers
 Vcs-Browser: https://sourceforge.net/p/pio/code/HEAD/tree/trunk/pioneers/
