--- a/trunk/pioneers/configure.ac
+++ b/trunk/pioneers/configure.ac
@@ -34,6 +34,7 @@ PIONEERS_DEFAULT_ADMIN_PORT=5555
 PIONEERS_DEFAULT_META_PORT=5557
 PIONEERS_DEFAULT_METASERVER=pioneers.debian.net
 
+# Upgrade note: after 2.36 look for GLIB_CHECK_VERSION(2,36,0)
 GLIB_REQUIRED_VERSION=2.26
 GIO_REQUIRED_VERSION=2.28
 GTK_REQUIRED_VERSION=3.22
